--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
+      BootStrap Css
+    -->
+    <link rel="stylesheet" href="globalcss/bootstrap.css">
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
