--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
     -->
     	<link rel="stylesheet" href="globalcss/icomoon.css">
 
+    <!-- SuperFish CSS -->
+      <link rel = "stylesheet" href="globalcss/superfish.css">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
