fixed route issue

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,15 +13,15 @@
     <!--
       BootStrap Css
           -->
-       <link rel="stylesheet" href="globalcss/bootstrap.css">
+       <link rel="stylesheet" href="/globalcss/bootstrap.css">
 
     <!-- Icomoon Icon Fonts
 
     -->
-    	<link rel="stylesheet" href="globalcss/icomoon.css">
+    	<link rel="stylesheet" href="/globalcss/icomoon.css">
 
     <!-- SuperFish CSS -->
-      <link rel = "stylesheet" href="globalcss/superfish.css">
+      <link rel = "stylesheet" href="/globalcss/superfish.css">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
