--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta name="keywords" content="Vrikshit Foundation ,SwachBharatAbhiyan,Clean India Green India,Vrikshit10KTreesChallenge,Save Earth,Best NGO in Delhi,Best NGO,NGO in Delhi,Founder of Vrikshit,Best Environment NGO,Environment Group,Champion Challenge Winner">
+  <meta name="author" content="Vrikhit Foundation">
+  <meta name="description" content="A foundation led by a group of students and professionals who want clean and green India.Say Yes to a Bright Future and a Healthy Upcoming generation."/>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,6 +30,7 @@
     -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js" async></script>
   <title>Vrikshit Foundation</title>
 </head>
 
